# spotify-mini-player

./: .gitmodules  package.json
src/: App.svelte  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: helpers.rs  main.rs  reauth.rs  redirect_uri.html  redirect_uri.rs  scopes.rs  state.rs
src-tauri/src/handlers/: mod.rs
src-tauri/src/state/: mod.rs  simplified_item.rs
src/lib/: Controls.svelte  CoverArt.svelte  Info.svelte  NextTrack.svelte  PlayPause.svelte  PrevTrack.svelte  Progress.svelte  Repeat.svelte  Save.svelte  Shuffle.svelte  ThiccButton.svelte  ThiccButton.ts  helpers.ts
src/lib/icons/: RepeatContext.svelte  RepeatTrack.svelte  Spotify.svelte
src/lib/state/: artist.ts  index.ts  lock.ts  playback.ts  simplified-album.ts  simplified-item.ts  user.ts
