[package]
name = "spotify-mini-player"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = [
  "macos-private-api",
  "shell-open",
  "system-tray",
] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
cocoa = "0.24.1"
window-vibrancy = "0.3.2"
objc2 = "0.2.7"
objc = "0.2.7"
rspotify = { version = "0.11.6", features = ["env-file", "cli"] }
env_logger = "0.10.0"
webbrowser = "0.8.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
